--- a/index.html
+++ b/index.html
@@ -770,12 +770,12 @@
       <div class="container">
          <div class="row">
             <div class="col-md-7 col-12">
-               <div class="ic-copyright md-text-start text-center">
+               <div class="ic-copyright text-md-end text-center">
                   <p>© All Rights Reserved 2015 - 2023 | Ibrahim Coder</p>
                </div>
             </div>
             <div class="col-md-5 col-12">
-               <div class="ic-footer-social md-text-end text-center">
+               <div class="ic-footer-social text-md-end text-center">
                   <ul>
                      <li><a target="_blank" href="https://www.facebook.com/ibrahimcoder0"><i class="fa-brands fa-facebook"></i></a></li>
                      <li><a target="_blank" href="https://twitter.com/ibrahim_coder"><i class="fa-brands fa-twitter"></i></a></li>
