--- a/index.html
+++ b/index.html
@@ -770,7 +770,7 @@
       <div class="container">
          <div class="row">
             <div class="col-md-7 col-12">
-               <div class="ic-copyright text-md-end text-center">
+               <div class="ic-copyright text-md-start text-center">
                   <p>© All Rights Reserved 2015 - 2023 | Ibrahim Coder</p>
                </div>
             </div>
